build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/teamcity-inner-exceptions.phpt.warn
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:38:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'ERRORS'
WARNING:38:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	!
WARNING:39:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:39:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:39:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:40:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
